# Killing_Weed_Robot

./: CMakeLists.txt  README.md  package.xml
config/: diff_drive_controller.yaml  ekf_localization.yaml  joint_names_KWR.yaml
launch/: controller.launch  display.launch  gazebo.launch  start_ekf_localization.launch
meshes/: Front_left_wheel_.STL  Front_right_wheel.STL  Left_Ruler.STL  Nozzle_ruler.STL  Rear_left_wheel.STL  Rear_right_wheel.STL  Right_Ruler.STL  base_link.STL
urdf/: KWR.csv  KWR.urdf
